# omara-os

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  RELEASES.md
manifests/dnf/: default.txt  repos.txt
manifests/dnf/categories/: browsers.txt  cloud.txt  desktop.txt  dev.txt  gnome.txt  icons.txt  media.txt  tools.txt  utilities.txt  wayland-extras.txt
manifests/flatpak/: apps.txt  remotes.txt
manifests/webapps/: apps.txt
releases/: v0.1.0.toml
scripts/legacy/: 00-repos.sh  01-install.sh  02-services.sh  03-user-services.sh  06-app-configs.sh  setup.sh
src/: config.rs  install.rs  main.rs  paths.rs  reset.rs
