[package]
name = "omara-os"
version = "0.1.0"
edition = "2021"
authors = ["Omara Labs <hello@omara.dev>"]
description = "The official Omara OS TUI Installer & Configuration utility"
license = "MIT"
repository = "https://github.com/omara-labs/omara-os"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
anyhow = "1.0"
shellexpand = "3.1"
chrono = "0.4"
inquire = "0.7"
dirs = "6.0"
